# 2023_lab4

./: CMakeLists.txt
src/graph-plotter/: Absolute.h  DashedLineStyle.cpp  DashedLineStyle.h  DataPoints.cpp  DataPoints.h  Display.cpp  Display.h  DottedLineStyle.cpp  DottedLineStyle.h  Exponential.cpp  Exponential.h  Function.h  Graph.cpp  Graph.h  LineStyle.cpp  LineStyle.h  Points.h  Polynomial.cpp  Polynomial.h  Sampler.h  Sinusoid.cpp  Sinusoid.h  SolidLineStyle.h  main.cpp
src/payroll/: Employee.cpp  Employee.h  EmployeeWcomission.cpp  EmployeeWcomisson.h  Fixed.cpp  Fixed.h  Hourly.cpp  Hourly.h  payroll-main  payroll-main.cpp  tasks.json
